# ibtop

./: README.md  pyproject.toml
src/ibtop/: __init__.py  __main__.py  cli.py  formatting.py  graph.py  model.py  sysfs.py  ui.py
tests/: test_formatting.py  test_graph.py  test_rates.py  test_sysfs.py  test_ui.py
